chore: add api client hooks
