# ch10/devjobs/libs/api-types/model/errorResponse.ts
@@ -5,6 +5,8 @@
  * API for the DevJobs platform
  * OpenAPI spec version: 1.0.0
  */
-import type { BaseJob } from './baseJob';
 
-export type CreateJob = BaseJob;
+export interface ErrorResponse {
+  statusCode: number;
+  message: string;
+}
