# ch10/devjobs/libs/api-types/model/index.ts
@@ -18,9 +18,12 @@ export * from './createJobAllOf';
 export * from './createUser';
 export * from './createUserAllOf';
 export * from './createUserRole';
+export * from './errorResponse';
 export * from './job';
 export * from './jobResponse';
 export * from './jobResponseAllOf';
+export * from './loginRequest';
+export * from './loginResponse';
 export * from './user';
 export * from './userResponse';
 export * from './userResponseAllOf';
